--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,13 +11,15 @@
   },
   "dependencies": {
     "@deepgram/sdk": "^3.9.0",
+    "cors": "^2.8.5",
     "lucide-react": "^0.454.0",
     "openssl": "^2.0.0",
     "playht": "^0.13.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^4.8.1",
+    "speaker": "^0.5.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
